src/examples/test-doubles/ReturnArgumentExampleTest.php.out
./tools/phpunit tests/ReturnArgumentExampleTest.php
PHPUnit 11.3.0 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.3.10

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 23.02 MB

There was 1 error:

1) ReturnArgumentExampleTest::testReturnArgumentStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ReturnArgumentExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
